# RustUDPVideo

./: .gitignore
Client/: Cargo.toml
Client/src/: main.rs
Server/: Cargo.toml
Server/src/: main.rs
Server/web-server/: camera.html
